# priceshift

./: .env.example  .gitignore  CLAUDE.md  README.md  config.toml  prediction_market_claude_code.md  pyproject.toml
.github/workflows/: update-dashboard.yml
data/: ground_truth_pairs.json  operational.sqlite-shm  operational.sqlite-wal
docs/: index.html
docs/data/: gaps.json  meta.json  open_trades.json  summary.json
src/priceshift/: config.py  export.py  main.py  models.py
src/priceshift/apis/: base.py  kalshi.py  polymarket.py
src/priceshift/dashboard/: cli.py
src/priceshift/db/: schema.py  store.py
src/priceshift/matching/: embeddings.py  matcher.py  verifier.py
src/priceshift/trading/: backtest.py  simulator.py
tests/: conftest.py
tests/test_apis/: test_normalization.py
tests/test_db/: test_store.py
tests/test_matching/: test_matcher.py  test_verifier.py
tests/test_trading/: test_simulator.py
