[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "priceshift"
version = "0.1.0"
description = "Prediction market arbitrage intelligence system"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "websockets>=12.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
"sentence-transformers>=3.0",
    "tenacity>=8.3",
    "rich>=13.7",
    "textual>=0.80",
    "numpy>=1.26",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
priceshift = "priceshift.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/priceshift"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
